<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_stats"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_stats"/>
        <item
                android:id="@+id/nav_trainings"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_trainings"/>
        <item
                android:id="@+id/nav_cons_pros_goals"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_cons_pros"/>
        <item
                android:id="@+id/nav_technique"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_goals_technique"/>
    </group>

    <item android:title="@string/menu_h_about_app">
        <menu>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
